# pagination_seven

./: .gitignore  README.md  main.py  pyproject.toml
paging/: display.py
tests/: test_display.py
