[project]
name = "Pagination Seven"
version = "1.0"
description = "A solution to the kata at https://codingdojo.org/kata/PaginationSeven/"
authors = [
    {name = "Brandon Corfman", email = "bcorfman@fastmail.fm"},
]
dependencies = []
requires-python = ">=3.7"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/bcorfman/pagination_seven"

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=6.2.5",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
